samples/_failures_safe/1761537415_37c972_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c7615fa.c: In function ‘main’:
./samples/SAFE/__tmp_0c7615fa.c:137:16: error: missing terminating " character
  137 |         printf("3. Exit\n
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_0c7615fa.c:137:9: error: expected expression at end of input
  137 |         printf("3. Exit\n
      |         ^~~~~~
./samples/SAFE/__tmp_0c7615fa.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c7615fa.c:137:9: error: expected declaration or statement at end of input
